# dig-constants

./: .gitignore  CHANGELOG.md  Cargo.toml  SPEC.md
.github/workflows/: ci.yml  publish.yml
src/: lib.rs
